--- a/index.html
+++ b/index.html
@@ -1,34 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/style.css">
+
   <title>Frontend Mentor | Social links profile</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+  <main class="card">
+    <img class="card__avatar" src="assets/images/avatar-jessica.jpeg" alt="Jessica Profile Image" width="176"
+      height="176">
+    <h1 class="card__name">Jessica Randall</h1>
+    <p class="card__location">London, United Kingdom</p>
+    <blockquote class="card__description" cite="#">"Front-end developer and avid reader."</blockquote>
+    <nav class="card__social-links" aria-label="Jessica's Social Media Link">
+      <ul class="social-links__ul">
+        <li class="social-links__li">
+          <a href="#" class="social-links__a">GitHub</a>
+        </li>
+        <li class="social-links__li">
+          <a href="#" class="social-links__a">Frontend Mentor</a>
+        </li>
+        <li class="social-links__li">
+          <a href="#" class="social-links__a">LinkedIn</a>
+        </li>
+        <li class="social-links__li">
+          <a href="#" class="social-links__a">Twitter</a>
+        </li>
+        <li class="social-links__li">
+          <a href="#" class="social-links__a">Instagram</a>
+        </li>
+      </ul>
+    </nav>
+  </main>
+  <!-- <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend
+      Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
+
 </html>
